# LearnE

./: README.md  README_en.md  build.gradle  settings.gradle
FreeReflection-core/: build.gradle
FreeReflection-core/src/main/cpp/: art.cpp
app/: .gitignore  build.gradle
doc/: ART深度探索开篇：从Method Hook谈起.md  Android N无法dlsym.md  Android热修复升级探索——追寻极致的代码热替换.md  Epic调用流程.txt  epic问题.txt  offset计算.md  todo.md  佬.txt  内存数据.txt  我为 Dexposed 续一秒——论 ART 上运行时 Method AOP 实现.md  指针与对象转换.md  无需 Root 也能使用 Xposed.md
doc/hide/org/lsposed/hiddenapibypass/: Helper.java  HiddenApiBypass.java  LL.java  Mu.java
doc/unuse/: ClassUtils.java  Unsafe.java
doc/官方/: APEX 文件格式 .md  ART TI .md  Android 8.0 中的 ART 功能改进 .md  Android Runtime (ART) 和 Dalvik .md  Dalvik 字节码 .md  Implementing ART Just-In-Time (JIT) Compiler.md  在 Android Runtime (ART) 中验证应用行为 .md  实现 ART 即时 (JIT) 编译器 .md  实现签名配置.md  约束 .md  调试 ART 垃圾回收.md  配置 ART.md
epic-core/: build.gradle  proguard-rules.pro
epic-core/src/main/: AndroidManifest.xml
epic-core/src/main/cpp/: CMakeLists.txt  art.cpp  epic.cpp  fake_dlfcn.cpp
epic-core/src/main/java/utils/: AA.java  ClassUtils.java  Debug.java  DeviceCheck.java  Logger.java  NeverCalled.java  NougatPolicy.java  Platform.java  Refunsafe.java  Runtime.java  Unsafe.java  UnsafeHelper.java
exposed-core/: build.gradle
exposed-xposedapi/: build.gradle
exposed-xposedapi/src/main/: AndroidManifest.xml
exposed-xposedapi/src/main/java/utils/: ClassUtils.java  MemberUtils.java  MinRef.java  Reflect.java  Subclass.java  XL.java
relinker-core/: README.md  build.gradle
(+69 files in other folders)
